2012-06-14 18:46  paddockd

	* [r348] ChangeLog, src/slimaudio/slimaudio.h,
	  src/slimaudio/slimaudio_output.c, src/squeezeslave/help.c,
	  src/squeezeslave/squeezeslave.c, src/squeezeslave/squeezeslave.h:
	  Added -g/--paframes and -j/--pabuffers options to configure
	  portaudio buffers at startup.
	  Updated -p/--port help section to use SLIMPROTOCOL_PORT define.
	  Increases revision to 348.

2012-06-14 12:05  paddockd

	* [r347] ChangeLog, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Changed framesPerBuffer and
	  numBuffers values for OSS when NOT using PA_DEV.
	  Increases portaudio buffer size from 78 to 428 msecs.
	  Increased revision to 347.

2012-06-10 19:27  paddockd

	* [r346] ChangeLog, makefile.sol10-intel-display,
	  makefile.sol10-sparc64-display, makefile.sol9-sparc-display,
	  src/squeezeslave/squeezeslave.c: Reverted removal of libsunmath.a
	  in solaris makefiles.
	  Increased revision to 346.

2012-06-10 17:49  paddockd

	* [r345] ChangeLog, sources/libogg-1.1.4.tar.bz2,
	  sources/libvorbis-1.3.2.tar.bz2, sources/portaudio-r1826.tar.gz,
	  sources/tremor-r17503.tar.bz2, src/squeezeslave/squeezeslave.c:
	  Deleted obsolete support library sources.
	  Increased revision to 345.

2012-06-10 17:42  paddockd

	* [r344] ChangeLog, contrib/makefile.sol-gcc-sparc-display,
	  patches/bitrate-limit-wma.patch: Added generic solaris makefile
	  for gcc to contrib.
	  Added server patch to enable bitrate limiting for wma.

2012-06-10 12:44  paddockd

	* [r343] ChangeLog, makefile.sol10-intel-display,
	  makefile.sol10-sparc64-display, makefile.sol9-sparc-display,
	  src/squeezeslave/squeezeslave.c: Removed unused sun math library
	  from solaris makefile link library.
	  Increases revision to 343.

2012-06-10 12:39  paddockd

	* [r342] ChangeLog, src/slimproto/slimproto.c,
	  src/squeezeslave/help.c, src/squeezeslave/squeezeslave.c:
	  Replaced __SUNPRO_C definitions with 'sun' to identify building
	  on solaris.